Update serviceTest classes